<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewVo</string>

    <string name="title_home">NewVo</string>
    <string name="title_create_post">Create Post</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>

    <string name="title_search">Search</string>
    <string name="title_social">Friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="desc_list_item_icon"/>

    <string name="log_out">Log Out</string>
    <string name="comment_description">button for comments</string>
    <string name="second_selection_description">button for second selection</string>
    <string name="first_selection_description">button for first selection</string>
    <string name="first_image_description">first image to compare</string>
    <string name="second_image_description">second image to compare</string>
    <string name="camera_description">Take Picture with a Camera</string>
    <string name="folder_description">Select Image from a Folder</string>
    <string name="selection_button">selection button</string>
    <string name="comments">expand for comments</string>
    <string name="remove_comment">remove comment</string>
    <string name="title_facebook_login">NewVo Login</string>
    <string name="app_id">760522837298852</string>
    <string name="title_login">NewVo Login</string>
    <string name="missing_caption">Needs a Caption</string>
    <string name="missing_suggestion">Please Enter a Suggestion</string>
    <string name="suggestion_added">Suggestion Added Successfully!</string>
    <string name="suggestion_removed">Suggestion Removed Successfully</string>
    <string name="suggestion_could_not_be_posted">Suggestion Could Not Be Posted</string>
    <string name="needs_image">Needs an Image</string>
    <string name="post_created">Post Created Successfully!</string>
    <string name="title_image"><![CDATA[Home > Image]]></string>
    <string name="title_summary_image"><![CDATA[Home > Image]]></string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="set_active">Set Active Successfully</string>
    <string name="set_inactive">Set Inactive Successfully</string>
    <string name="could_not_set_inactive">Could Not Set Inactive</string>
    <string name="could_not_set_active">Could Not Set Active</string>
    <string name="post_deleted">Post Deleted Successfully</string>
    <string name="could_not_delete_post">Could Not Delete Post</string>
    <string name="could_not_delete_suggestion">Could Not Delete Suggestion</string>
    <string name="could_not_create_post">Could Not Create Post</string>
    <string name="title_groups">Groups</string>
    <string name="title_group">Group</string>

    <string-array name="nav_drawer_items">
        <item >@string/title_home</item>
        <item >@string/title_create_post</item>
        <item >@string/title_profile</item>
        <item>@string/title_groups</item>
        <item >@string/action_settings</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/hanger</item>
        <item>@drawable/profile</item>
        <item>@drawable/groups</item>
        <item>@drawable/settings</item>
    </array>

</resources>
