<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <ImageButton android:layout_width="match_parent" android:layout_height="match_parent"
                     android:id="@+id/first_choice"
                     android:adjustViewBounds="false"
                     android:src="@drawable/check"
                     android:background="@null"
                     android:scaleType="fitCenter"
                     android:layout_weight="1"
                     android:layout_marginLeft="10dp"
                     android:contentDescription="@string/first_selection_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignBottom="@+id/main_button"
                android:layout_alignTop="@+id/main_button"
                android:visibility="gone"
                android:background="@null"
                android:indeterminate="true"
                />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main_button"
                android:background="@null"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/comment_description"
                android:src="@drawable/post"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/facebook_share_button"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:contentDescription="@string/comment_description"
                android:background="@null"
                android:src="@drawable/facebook_share"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:checked="false"
                android:textOn=" "
                android:textOff=" "
                android:enabled="true"
                />

        </LinearLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/second_choice"
            android:adjustViewBounds="false"
            android:background="@null"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/second_selection_description"
            android:src="@drawable/x"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/linearLayout">
    </LinearLayout>

</LinearLayout>